@@ -15,7 +15,7 @@ URL: http://rkward.sourceforge.net
 Authors@R: c(person(given="Meik", family="Michalke",
     email="meik.michalke@hhu.de", role=c("aut", "cre")))
 Version: 0.06-2
-Date: 2013-02-18
+Date: 2013-02-19
 Collate:
     'echo.R'
     'id.R'
