@@ -5,7 +5,6 @@
 #' @note The \code{<optionset>} node was introduced with RKWard 0.6.1, please set the dependencies
 #'		of your component/plugin accordingly.
 #'
-#' @param id.name Character string, a unique ID for this plugin element.
 #' @param label Either logical or a character string. If given, the optioncolumn will be displayed in the \code{<optiondisplay>} in a column by that label.
 #'		If set to \code{TRUE} and you provide a XiMpLe node object to \code{connect}, the label will be extracted from that node.
 #' @param external Logical, set to \code{TRUE} if the optioncolumn is controlled from outside the optionset.
@@ -15,6 +14,8 @@
 #'		when the property changes inside the content-area.
 #' @param modifier Character string, the modifier of the property to connect to, will be appended to the \code{id} of \code{connect}.
 #' @param default Character string, only for external columns: The value to assume for this column, if no value is known for an entry. Rarely useful.
+#' @param id.name Character string, a unique ID for this plugin element.
+#'		If \code{"auto"}, an ID will be generated automatically from the \code{connect} object.
 #' @return An object of class \code{XiMpLe.node}.
 #' @export
 #' @seealso
@@ -23,10 +24,26 @@
 #'		and the \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
 #' @examples
 #' myInput <- rk.XML.input(label="Given name(s)", size="small")
-#' myOptCol <- rk.XML.optioncolumn("os_name", connect=myInput, modifier="text")
-rk.XML.optioncolumn <- function(id.name, label=TRUE, external=FALSE, connect=NULL, modifier=NULL, default=NULL){
+#' myOptCol <- rk.XML.optioncolumn(myInput, modifier="text")
+rk.XML.optioncolumn <- function(connect, modifier=NULL, label=TRUE, external=FALSE, default=NULL, id.name="auto"){
 
-	attr.list <- list(id=id.name)
+	connect.id <- check.ID(connect)
+	if(is.XiMpLe.node(connect) && !is.null(modifier)){
+		# validate modifier
+		if(modif.validity(connect, modifier=modifier)){
+			connect.id <- paste(connect.id, modifier, sep=".")
+		} else {}
+	} else {}
+
+	if(identical(id.name, "auto")){
+		attr.list <- list(
+			id=auto.ids(connect.id, prefix=ID.prefix("ocolumn"), chars=10),
+			connect=as.character(connect.id))
+	} else if(!is.null(id.name)){
+		attr.list <- list(id=id.name, connect=as.character(connect.id))
+	} else {
+		stop(simpleError("'id.name' must have a value!"))
+	}
 
 	if(is.logical(label)){
 		if(isTRUE(label)){
@@ -41,19 +58,6 @@ rk.XML.optioncolumn <- function(id.name, label=TRUE, external=FALSE, connect=NUL
 
 	if(isTRUE(external)){
 		attr.list[["external"]] <- "true"
-	} else {}
-
-	if(!is.null(connect)){
-		# let's see if we need to extract IDs first
-		connect.id <- check.ID(connect)
-		# if connect is an XML node, append 
-		if(is.XiMpLe.node(connect) && !is.null(modifier)){
-			# validate get modifier
-			if(modif.validity(connect, modifier=modifier)){
-				connect.id <- paste(connect.id, modifier, sep=".")
-			} else {}
-		} else {}
-		attr.list[["connect"]] <- as.character(connect.id)
 	} else {}
 
 	if(!is.null(default)){
