@@ -2,14 +2,11 @@
 \alias{rk.XML.optioncolumn}
 \title{Create XML node "optioncolumn" for RKWard plugins}
 \usage{
-  rk.XML.optioncolumn(id.name, label = TRUE,
-    external = FALSE, connect = NULL, modifier = NULL,
-    default = NULL)
+  rk.XML.optioncolumn(connect, modifier = NULL,
+    label = TRUE, external = FALSE, default = NULL,
+    id.name = "auto")
 }
 \arguments{
-  \item{id.name}{Character string, a unique ID for this
-  plugin element.}
-
   \item{label}{Either logical or a character string. If
   given, the optioncolumn will be displayed in the
   \code{<optiondisplay>} in a column by that label.  If set
@@ -37,6 +34,10 @@
   \item{default}{Character string, only for external
   columns: The value to assume for this column, if no value
   is known for an entry. Rarely useful.}
+
+  \item{id.name}{Character string, a unique ID for this
+  plugin element.  If \code{"auto"}, an ID will be
+  generated automatically from the \code{connect} object.}
 }
 \value{
   An object of class \code{XiMpLe.node}.
@@ -52,7 +53,7 @@
 }
 \examples{
 myInput <- rk.XML.input(label="Given name(s)", size="small")
-myOptCol <- rk.XML.optioncolumn("os_name", connect=myInput, modifier="text")
+myOptCol <- rk.XML.optioncolumn(myInput, modifier="text")
 }
 \seealso{
   \code{\link[rkwarddev:rk.XML.optionset]{rk.XML.optionset}},
