@@ -4,7 +4,7 @@
 \usage{
   rk.XML.optionset(content, optioncolumn, min_rows = 0,
     min_rows_if_any = 0, max_rows = 0, keycolumn = NULL,
-    logic = NULL, optiondisplay = NULL, id.name = "auto")
+    logic = NULL, optiondisplay = TRUE, id.name = "auto")
 }
 \arguments{
   \item{content}{A list of XiMpLe.nodes to be placed inside
@@ -31,11 +31,10 @@
 
   \item{optiondisplay}{Logical value, can be used to
   automatically add an \code{<optiondisplay>} node on top
-  of the \code{<content>} section, if set to something
-  other than \code{NULL}. Depending on whether it's
-  \code{TRUE} or \code{FALSE}, its \code{index} argument
-  will be set to \code{"true"} or \code{"false"},
-  respectively.}
+  of the \code{<content>} section. Depending on whether
+  it's \code{TRUE} or \code{FALSE}, its \code{index}
+  argument will be set to \code{"true"} or \code{"false"},
+  respectively. Set to \code{NULL} to deactivate.}
 
   \item{id.name}{Character string, a unique ID for this
   plugin element.  If \code{"auto"}, an ID will be
@@ -51,6 +50,25 @@
   The \code{<optionset>} node was introduced with RKWard
   0.6.1, please set the dependencies of your
   component/plugin accordingly.
+}
+\examples{
+firstname <- rk.XML.input("Given name(s)")
+lastname <- rk.XML.input("Family name")
+genderselect <- rk.XML.radio("Gender", options=list(
+  Male = c(val="m"),
+  Female = c(val="f")))
+rk.XML.optionset(
+  content = list(
+    rk.XML.row(
+      firstname,
+      lastname,
+      genderselect)),
+  optioncolumn = list(
+    rk.XML.optioncolumn(firstname, modifier="text"),
+    rk.XML.optioncolumn(lastname, modifier="text"),
+    rk.XML.optioncolumn(genderselect)
+  )
+)
 }
 \seealso{
   \code{\link[rkwarddev:rk.XML.optioncolumn]{rk.XML.optioncolumn}},
