@@ -1,7 +1,7 @@
 \name{NEWS}
 \title{News for Package 'rkwarddev'}
 \encoding{UTF-8}
-\section{Changes in rkwarddev version 0.06-2 (2013-02-15)}{
+\section{Changes in rkwarddev version 0.06-2 (2013-02-18)}{
   \subsection{changed}{
     \itemize{
       \item the structure of <about> nodes will change in RKWard 0.6.1, <dependencies> will become
@@ -11,6 +11,11 @@
       \item for consistency, from now on <component> is never an empty node
       \item \code{rk.XML.pluginmap()} will now move <dependencies> from <about> to a top level child node
         of plugin maps, with a warning
+      \item the object class rk.JS.var gained a new slot \code{"getter"} to set a default JS function
+        to query variable values. it defaults to \code{"getValue"} to ensure compatibility with earlier
+        releases. consequently, \code{rk.JS.vars()} and \code{rk.paste.JS()} have a new \code{"getter"} argument to set
+        or overwrite this value. another new argument, \code{"guess.getter"}, can be used to turn on
+        automatic guessing which getter function might be most appropriate.
     }
   }
   \subsection{added}{
